--- a/team3-app/src/App.css
+++ b/team3-app/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+.wholeNavBar {
+  width: 100%;
+  background-color: #8F8EBF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.navListUl {
+  list-style-type: none;
+  display: flex;
+  justify-content:space-between;
+  color: #474073;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size:medium;
+
+}
+
+.navListUl li {
+  padding: 20px;
+}
+
+
+.teamLogo {
+  height: 100px;
 }
