--- a/team3-app/src/App.css
+++ b/team3-app/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin: 0;
 }
 
 .App-logo {
@@ -41,11 +42,11 @@
 
 .wholeNavBar {
   width: 100%;
+  margin: 0;
   background-color: #8F8EBF;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
 }
 
 .navListUl {
