--- a/team3-app/src/App.css
+++ b/team3-app/src/App.css
@@ -1,6 +1,14 @@
 .App {
   text-align: center;
   margin: 0;
+  background-color: white;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
 }
 
 .App-logo {
@@ -14,16 +22,7 @@
   }
 }
 
-.App-header {
-  background-color: white;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -37,7 +36,6 @@
     transform: rotate(360deg);
   }
 }
-
 
 
 .wholeNavBar {
@@ -67,4 +65,8 @@
 
 .teamLogo {
   height: 100px;
+}
+
+.homePage {
+  width: 100%;
 }
