--- a/team3-app/src/App.css
+++ b/team3-app/src/App.css
@@ -70,3 +70,31 @@
 .homePage {
   width: 100%;
 }
+
+.memberCardsContainer {
+  display: flex;
+}
+
+.memberCard {
+  width: 300px;
+  height: 500px;
+  margin: 10px;
+  border-radius: 20px;
+  background: #8F8EBF;
+}  
+
+a {
+  margin: 0;
+  text-decoration: none;
+}
+
+h2 {
+  margin: 0;
+}
+
+.addMemberButton {
+  color: #474073;
+  font-size: xx-large;
+  border: none;
+  background-color: transparent;
+}
