--- a/team3-app/src/App.css
+++ b/team3-app/src/App.css
@@ -22,7 +22,13 @@
   }
 }
 
+a {
+  color: white;
+}
 
+a:hover {
+  color: #474073;
+}
 
 .App-link {
   color: #61dafb;
@@ -71,17 +77,7 @@
   width: 100%;
 }
 
-.memberCardsContainer {
-  display: flex;
-}
-
-.memberCard {
-  width: 300px;
-  height: 500px;
-  margin: 10px;
-  border-radius: 20px;
-  background: #8F8EBF;
-}  
+ 
 
 a {
   margin: 0;
@@ -93,8 +89,14 @@ h2 {
 }
 
 .addMemberButton {
-  color: #474073;
+  color: white;
+  border-radius: 100%;
   font-size: xx-large;
   border: none;
-  background-color: transparent;
+  background-color: #474073;
+  width: 100px;
+  height: 100px;
 }
+
+
+
