--- a/team3-app/src/components/MemberCard.css
+++ b/team3-app/src/components/MemberCard.css
@@ -1,12 +1,19 @@
 .memberCardsContainer {
     display: flex;
+    align-items: center;
+    flex-wrap:wrap;
   }
 
 
 .memberCard {
-    width: 300px;
-    height: 400px;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
     margin: 10px;
+    padding: 20px;
     border-radius: 20px;
     background: #8F8EBF;
 } 
