--- a/team3-app/src/pages/Member.css
+++ b/team3-app/src/pages/Member.css
@@ -1,6 +1,6 @@
 .img-profile {
-    width: 40%;
-    height: 40%;
+    width: 100%;
+    height: 100%;
   }
 
   .img-section {
@@ -8,9 +8,16 @@
     height: 100%;
   }
   
-  .about-section {
+  .left-section {
     width: 100%;
     height: 200px;
     background-color: #474073;
     color: white;
+  }
+
+  .right-section {
+    width: 100%;
+    height: 200px;
+    background-color: white;
+    color: #474073;
   }
