adding parallex to image section

--- a/team3-app/src/pages/Member.css
+++ b/team3-app/src/pages/Member.css
@@ -1,11 +1,27 @@
-.img-profile {
+.member-page {
+  margin: 0;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.img-section {
     width: 100%;
     height: 100%;
   }
 
-  .img-section {
-    width: 100%;
-    height: 100%;
+  .img-profile {
+    /* The image used */
+    background-image: url("./images/JodieHols.png");
+
+    /* Set a specific height */
+    min-width: 1000vh;
+    min-height: 500px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   .left-section {
