--- a/team3-app/src/pages/Member.css
+++ b/team3-app/src/pages/Member.css
@@ -24,6 +24,21 @@
     background-size: cover;
   }
 
+  .img-profile-fiona {
+      /* The image used */
+      background-image: url("../../public/images/fionamossman.jpg");
+
+      /* Set a specific height */
+      min-width: 100vh;
+      min-height: 500px;
+  
+      /* Create the parallax scrolling effect */
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+  }
+
   img-profile-fiona {
     /* The image used */
     background-image: url("./images/JodieHols.png");
