--- a/team3-app/src/components/MemberCard.css
+++ b/team3-app/src/components/MemberCard.css
@@ -27,3 +27,15 @@
   width: 100px;
   height: 100px;
 }
+
+
+
+.cardPicture {
+  width: 100px;
+  height: 100px;
+  max-width: 100px;
+  max-height: 100px;
+  object-fit: cover;
+  border-radius: 50px;
+  margin: 20px;
+}
