--- a/team3-app/src/App.css
+++ b/team3-app/src/App.css
@@ -16,7 +16,11 @@
   pointer-events: none;
 }
 
-
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
 
 a {
   color: white;
@@ -74,10 +78,6 @@ a {
 }
 
 h2 {
-  margin: 0;
-}
-
-h4 {
   margin: 0;
 }
 
