--- a/team3-app/src/pages/Member.css
+++ b/team3-app/src/pages/Member.css
@@ -54,9 +54,9 @@
     background-size: cover;
   }
 
-  img-profile-erin {
+  .img-profile-erin {
     /* The image used */
-    background-image: url("./images/JodieHols.png");
+    background-image: url("../../public/images/Erin.jpg");
 
     /* Set a specific height */
     min-width: 100vh;
