--- a/team3-app/src/components/MemberCard.css
+++ b/team3-app/src/components/MemberCard.css
@@ -28,15 +28,25 @@
   height: 100px;
 }
 
+.animate {
+  animation-duration: 2s;
+  animation-name: animate-fade;
+  animation-delay: 0.5s;
+  animation-fill-mode: backwards;
+}
 
+@keyframes animate-fade {
+  0% { opacity: 0; scale: 110%;}
+  100% { opacity: 1; scale: 100%}
+  
 
+}
 
+.cardPicture {
   object-fit: cover;
-  width: 75px;
+  width: 100px;
   height: 100px;
-  max-width: 100px;
-  max-height: 100px;
-  border-radius: 50px;
+  border-radius: 60px;
   margin: 20px;
   border:5px solid #474073;
 
