--- a/team3-app/src/components/MemberCard.css
+++ b/team3-app/src/components/MemberCard.css
@@ -28,8 +28,14 @@
   height: 100px;
 }
 
+.addMemberButton:hover {
+  color: #474073;
+  background-color: white;
+ 
+}
+
 .animate {
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-name: animate-fade;
   animation-delay: 0.5s;
   animation-fill-mode: backwards;
@@ -38,8 +44,6 @@
 @keyframes animate-fade {
   0% { opacity: 0; scale: 110%;}
   100% { opacity: 1; scale: 100%}
-  
-
 }
 
 .cardPicture {
